--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,11 @@ mcp>=1.0.0
 fastapi>=0.104.0
 uvicorn>=0.24.0
 pydantic>=2.0.0
+boto3
+botocore
+psycopg2-binary
+sqlparse
+python-dotenv
+mangum
+pytest
+pytest-asyncio
